--- a/framework/ThingsGateway.Blazor/Page/HistoryValuePage.razor
+++ b/framework/ThingsGateway.Blazor/Page/HistoryValuePage.razor
@@ -42,23 +42,23 @@
         <MMenu CloseOnContentClick="false" OffsetY Context="menu">
             <ActivatorContent>
                 <MTextField Dense Readonly Style="max-width:200px;" HideDetails=@("auto") Class="my-1  mx-2 "
-                            Value="context.StartTime"
+                            Value="context.StartTime.Value.ToDefaultDateTimeFormat(InitTimezone.TimezoneOffset)"
                                     Clearable
                 @attributes="menu.Attrs" Outlined Label=@context.Description(x => x.StartTime) />
             </ActivatorContent>
             <ChildContent>
-                <AppDateTimePicker OutputTimezoneOffset="DateTimeOffset.Now.Offset" @bind-Value="context.StartTime"></AppDateTimePicker>
+                <AppDateTimePicker  @bind-Value="context.StartTime"></AppDateTimePicker>
             </ChildContent>
         </MMenu>
 
         <MMenu CloseOnContentClick="false" OffsetY Context="menu">
             <ActivatorContent>
                 <MTextField Dense Readonly Style="max-width:200px;" HideDetails=@("auto") Class="my-1  mx-2 "
-                            Value="context.EndTime" Clearable
+                            Value="context.EndTime.Value.ToDefaultDateTimeFormat(InitTimezone.TimezoneOffset)" Clearable
                 @attributes="menu.Attrs" Outlined Label=@context.Description(x => x.EndTime) />
             </ActivatorContent>
             <ChildContent>
-                <AppDateTimePicker OutputTimezoneOffset="DateTimeOffset.Now.Offset" @bind-Value="context.EndTime"></AppDateTimePicker>
+                <AppDateTimePicker  @bind-Value="context.EndTime"></AppDateTimePicker>
             </ChildContent>
         </MMenu>
 
