去除页面多余引号

--- a/framework/ThingsGateway.Blazor/Page/HardwareInfoPage.razor
+++ b/framework/ThingsGateway.Blazor/Page/HardwareInfoPage.razor
@@ -130,7 +130,7 @@
         <MCard Elevation="1" Class="ma-2">
             <MCardSubtitle Class=@("text-h6")>
                 <div class="mt-1  d-flex align-center justify-space-between">
-                    <span>"当前内存/磁盘信息</span>
+                    <span>当前内存/磁盘信息</span>
                 </div>
             </MCardSubtitle>
             <MDivider></MDivider>
