添加自定义详情模板

--- a/framework/ThingsGateway.Admin.Blazor/Components/AppDataTable.razor
+++ b/framework/ThingsGateway.Admin.Blazor/Components/AppDataTable.razor
@@ -189,7 +189,7 @@
                 }
                 else
                 {
-                    if (ItemColWithDTTemplate!=null)
+                    if (ItemColWithDTTemplate != null)
                     {
                         @ItemColWithDTTemplate(context)
                     }
@@ -220,7 +220,7 @@
 
                         }
                     }
-                    
+
 
                 }
             </ItemColContent>
@@ -302,7 +302,12 @@
     <MContainer>
         <MSimpleTable Dense FixedHeader>
             <tbody>
-                @if (DetailShow)
+
+                @if (Detailemplate != null && DetailShow)
+                {
+                    @Detailemplate(DetailModel)
+                }
+                else if (DetailShow)
                 {
                     @foreach (var item in Headers)
                     {
