--- a/framework/ThingsGateway.Blazor/DebugPage/DefalutDebugDriverPage.razor
+++ b/framework/ThingsGateway.Blazor/DebugPage/DefalutDebugDriverPage.razor
@@ -33,7 +33,7 @@
             <TcpClientPage @ref=TcpClientPage></TcpClientPage>
             break;
         case ChannelEnum.SerialPort:
-            <SerialClientPage @ref=SerialClientPage></SerialClientPage>
+            <SerialSessionPage @ref=SerialSessionPage></SerialSessionPage>
             break;
         case ChannelEnum.UdpSession:
             <UdpSessionPage @ref=UdpSessionPage></UdpSessionPage>
