添加 页脚 编译时间显示

--- a/framework/ThingsGateway.Admin.Blazor.Core/Components/Foter.razor
+++ b/framework/ThingsGateway.Admin.Blazor.Core/Components/Foter.razor
@@ -19,7 +19,7 @@
 <MSheet>
     <MCard Flat Href=@CONFIG_COPYRIGHT_URL Target="_blank">
         <MLabel Style="background-color:inherit;" Class="text-subtltie-2">@CONFIG_COPYRIGHT</MLabel>
-        <MLabel Style="background-color:inherit;" Class="text-subtltie-2 ml-4">@Version</MLabel>
+        <MLabel Style="background-color:inherit;white-space: pre;" Class="text-subtltie-2 ml-4">@Version</MLabel>
     </MCard>
 </MSheet>
 
