--- a/framework/ThingsGateway.Blazor/Page/UploadDevicePage.razor
+++ b/framework/ThingsGateway.Blazor/Page/UploadDevicePage.razor
@@ -14,6 +14,7 @@
 @namespace ThingsGateway.Blazor
 @using System.Linq.Expressions;
 @using BlazorComponent;
+@using Furion;
 @using Mapster;
 @using Masa.Blazor.Presets;
 @using System.IO;
@@ -149,7 +150,7 @@ else
                 case nameof(context.Item.PluginId):
                     <span title=@context.Value>
                         @(
-                            DriverPluginService.GetNameById(context.Item.PluginId)
+                            App.GetService<DriverPluginService>().GetNameById(context.Item.PluginId)
                                 )
                     </span>
                     break;
