feat：ManageGatewayWorker part

--- a/framework/ThingsGateway.Blazor/Page/ManageGatewayPage.razor
+++ b/framework/ThingsGateway.Blazor/Page/ManageGatewayPage.razor
@@ -33,7 +33,7 @@
 @layout MainLayout
 
 <MRow NoGutters>
-    <MExpansionPanels @bind-Values="panel"
+    <MExpansionPanels @bind-Values="Panel"
                             Multiple>
         <MExpansionPanel Value="1">
             <MExpansionPanelHeader>
